# superbig

./: LICENSE  README.md  pyproject.toml
src/superbig/: __init__.py  base.py
src/superbig/collector/: chroma.py
src/superbig/embedder/: sentence_transformer.py
src/superbig/injector/: generic.py
src/superbig/prepared_prompt/: alpaca.py
src/superbig/provider/: provider.py
src/superbig/searcher/: cosine_similarity.py
src/superbig/source/: source_builder.py  url_source.py
