[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "superbig"
version = "0.1.0"
authors = [
  { name="Kaiokendev", email="129691954+kaiokendev@users.noreply.github.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kaiokendev/superbig"
"Bug Tracker" = "https://github.com/kaiokendev/superbig/issues"